--- a/css/theme.css
+++ b/css/theme.css
@@ -12,7 +12,7 @@ li{
 
 /*左侧界面*/
 .leftview-web{
-  width: 25%;
+  width: 250px;
   height: 1000px;
   background: rgb(26,30,43);
   float: left;
@@ -64,11 +64,11 @@ li{
 .cellimg{
   margin-left: 26px;
   margin-right: 30px;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .celltitle{
-  font-size: 18px;
+  font-size: 16px;
 }
 
 /*右侧界面*/
