--- a/css/theme.css
+++ b/css/theme.css
@@ -3,6 +3,9 @@
   margin:0px,0px;
   padding:0px,0px;
 }
+.page{
+  background: rgb(232,232,232);
+}
 .clearfix{
   clear:both;
 }
@@ -13,9 +16,12 @@ li{
 /*左侧界面*/
 .leftview-web{
   width: 250px;
-  height: 1000px;
+  height: 776px;
   background: rgb(26,30,43);
   float: left;
+  position: fixed;
+  top: 0px;
+  left: 0px;
 }
 
 .usertitle{
@@ -53,7 +59,7 @@ li{
 
 .line{
   margin-top: -5px;
-  height: 35px;
+  height: 32px;
   width: 3px;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
@@ -71,10 +77,17 @@ li{
   font-size: 16px;
 }
 
+.datetime{
+  margin-top: 420px;
+  margin-right: 10px;
+  color: white;
+  float: right;
+}
+
 /*右侧界面*/
 .content{
-  width: 75%;
-  height: 1000px;
-  background: rgb(232,232,232);
-  float: left;
+  width: 1100px;
+  height: 776px;
+  /*float: left;*/
+  margin-left: 250px;
 }
