--- a/css/theme.css
+++ b/css/theme.css
@@ -25,14 +25,12 @@ li{
   overflow: hidden;
   z-index: 9999;
 }
-
 .usertitle{
   float: left;
   margin-left: 22px;
   margin-top: 35px;
   color: white;
 }
-
 .userimg{
   width: 50px;
   height: 50px;
@@ -42,23 +40,20 @@ li{
   border-radius: 5px;
   float: left;
 }
-
+/* 左侧cell */
 .cell{
   margin: 12px 0px
 }
-
 .cellcontent{
   padding: 5px 0px;
   margin-left: -40px;
   color: white;
   cursor: pointer;
 }
-
 .actives{
   color: rgb(255, 195, 63);
   background: rgb(61,56,40);
 }
-
 .line{
   margin-top: -5px;
   height: 32px;
@@ -68,17 +63,14 @@ li{
   background: rgb(255, 195, 63);
   float: left;
 }
-
 .cellimg{
   margin-left: 26px;
   margin-right: 30px;
   font-size: 16px;
 }
-
 .celltitle{
   font-size: 16px;
 }
-
 .datetime{
   color: white;
   float: right;
@@ -90,4 +82,54 @@ li{
 /*右侧界面*/
 .content{
   margin-left: 25%;
+}
+
+/* 扩展链接页面 */
+.linkview{
+  background: white;
+  border-radius: 10px;
+  width: 310px;
+  height: auto;
+  float: left;
+  margin-left: 30px;
+  overflow: hidden;
+}
+.linksepline{
+  width: 310px;
+  background: black;
+  height: 2px;
+}
+.linksepline_gray{
+  margin-top: 20px;
+  margin-left: 5%;
+  width: 90%;
+  background: #ccc;
+  height: 2px;
+}
+.linktag_title{
+  margin-left: 20px;
+}
+.linktag{
+  display: inline-block;
+  margin-left: 25px;
+  margin-top: 10px;
+  cursor: pointer;
+}
+.linktag:hover{
+  color: rgb(255, 195, 63);
+}
+.linktag_active{
+  color: rgb(255, 195, 63);
+}
+.linktag_disactive{
+  color: black;
+}
+.linkviewcell_most{
+  margin-left: 25px;
+  margin-top: 10px;
+  color: #808080;
+  cursor: pointer;
+}
+.linkviewcell_most_active{
+
 }
