--- a/css/theme.css
+++ b/css/theme.css
@@ -30,15 +30,16 @@ li{
   margin-left: 22px;
   margin-top: 35px;
   color: white;
+  cursor: pointer;
 }
 .userimg{
   width: 50px;
   height: 50px;
   margin-left: 30px;
   margin-top: 30px;
-  background: red;
   border-radius: 5px;
   float: left;
+  cursor: pointer;
 }
 /* 左侧cell */
 .cell{
